# mappings

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  Taskfile.yaml  pyproject.toml  setup.cfg  test-mypy.ini
.github/workflows/: test.yml
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
examples/: safe_dataclass_replace.py  simple.py  use_pydantic.py
mappings/: __init__.py  _converter.py  _field.py  _functions.py  _not_set.py  _schema.py
tests/: test_examples.py  test_from.py  test_integration.py  test_schema.py
tests/test_example/: test_some_function.py
typed_dict/: __init__.py  _from.py  _mypy_ast.py  _mypy_plugin.py  _types.py
types/: from_dataclass.py  helpers.py  test_from_dataclass.yml
