[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "mappings"
description = "Like attrs, but for dicts!"
version = "0.1.0"
license = "BSD-3-Clause"

authors = []

readme = "README.md"

repository = "https://github.com/dry-python/mappings"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
mypy = "*"

wemake-python-styleguide = "*"
flake8-pytest-style = "*"
nitpick = "*"

safety = "*"

pytest = "*"
pytest-cov = "*"
pytest-randomly = "*"

sphinx = "*"
sphinx-autodoc-typehints = "*"
doc8 = "*"
m2r2 = "*"
tomlkit = "*"
